# prog5lr3

./: README.md  setup.cfg  setup.py
src/WeatherMag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: __init__.py
src/weather_mag/: __init__.py
