[metadata]
name = WeatherMag
version = 0.0.2
author = Maaaggerr
long_description = file : README.md
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
requires = >=3.6

[options.packages.find]
where = src